# cmakeTutorial

./: .gitignore  README.md
examples/00-EmptyCMake/: CMakeLists.txt
examples/01-HellowWorld/: CMakeLists.txt  main.cpp
examples/02-IncludeDirectories/: CMakeLists.txt
examples/02-IncludeDirectories/include/: header.h
examples/02-IncludeDirectories/src/: main.cpp
examples/03-CompileDefinitions/: CMakeLists.txt  main.cpp
examples/04-BuildingAndInstalling/: CMakeLists.txt  main.cpp
examples/05-StaticLibrary/: CMakeLists.txt
examples/06-SharedLibrary/: CMakeLists.txt  engine.cpp  engine.h
examples/07-HeaderLibrary/: CMakeLists.txt  engine.h
examples/09-CopyDll/: CMakeLists.txt
examples/10-Download/: CMakeLists.txt  main.cpp
slides/: makefile
slides/src/: basic.tex  introduction.tex  libs.tex  presentation.tex
